# PyCTemplate

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
include/: placeholder.hpp
scripts/: init-project.sh  install-hooks.sh  sync-template.sh  update-submodules.sh
scripts/hooks/: post-checkout  post-merge  post-rewrite
src/: main.cpp  placeholder.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
